<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nhcapp.RegisterActivity"
    tools:showIn="@layout/activity_register">


    <TextView
        android:id="@+id/txterror"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:gravity="center"
        android:textColor="@color/white"

        />

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"

    >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

            android:orientation="vertical">


            <TextView
                android:id="@+id/txtCientName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:clickable="false"
                android:gravity="center|left"
                android:paddingLeft="8dp"
                android:text="@string/registration_title"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"

                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edtFirstnameWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edtFirstname"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"


                        android:hint="@string/firstname_hint"
                        android:inputType="textCapWords"
                        android:textColorHint="#000000" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edtLastnameWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edtLastname"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"


                        android:hint="@string/lastname_hint"
                        android:inputType="textCapWords"
                        android:textColorHint="#000000" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/edtEmailWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#000000" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/edtmobileWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtMobile"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="Mobile"
                    android:inputType="numberSigned"
                    android:maxLength="10"
                    android:textColorHint="#000000" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/edtpasswordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edtpassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textColorHint="#000000" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/edtAddressWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|left|top"


                    android:hint="@string/useraddress_hint"

                    android:inputType="textMultiLine|textCapWords"
                    android:maxLines="3"
                    android:minLines="2"
                    android:textColorHint="#000000" />
            </android.support.design.widget.TextInputLayout>

            <!-- <android.support.design.widget.TextInputLayout
                 android:id="@+id/repeatPasswordWrapper"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">

                 <EditText
                     android:id="@+id/repeatPasswordSignUp"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:hint="@string/password_hint"
                     android:inputType="textPassword"
                     android:textColorHint="#000000" />
             </android.support.design.widget.TextInputLayout>-->

            <RadioGroup
                android:id="@+id/rdGrpGender"

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"


                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/rdMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:checked="true"

                    android:text="Male" />


                <RadioButton
                    android:id="@+id/rdFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="Female" />

            </RadioGroup>

            <!--<Button-->
            <!--android:id="@+id/user_signup_button"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@color/primary_color"-->
            <!--android:textColor="@color/white"-->
            <!--android:text="@string/sign_up_button" />-->

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSignup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/sign_up_button"
                android:textColor="@color/white" />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSignin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/sign_in_button"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/custom_signin_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:gravity="center"
                android:onClick="CallLoginIntent"
                android:text="Already have account.? Login"
                android:textSize="16sp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/colorSecondaryText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/or"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/colorSecondaryText" />


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
