<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nhcapp.LoginActivity"
    tools:showIn="@layout/activity_login">

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:gravity="center"
        android:textColor="@color/white"

        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

      >

            <LinearLayout
                android:id="@+id/main_container"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"


                android:animateLayoutChanges="true"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/applogo_imageView"
                    android:layout_width="150dp"
                    android:layout_height="110dp"

                    android:layout_gravity="center"

                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/app_name"
                    android:tint="@color/colorPrimary"
                    android:src="@drawable/splash_screen_500" />

                <LinearLayout
                    android:id="@+id/signin_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/usernameWrapper"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edtEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/username_email_hint"
                                android:inputType="textPersonName" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/passwordWrapper"
                            android:layout_width="match_parent"
                            app:passwordToggleEnabled="true"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edtPasword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/password_hint"
                                android:inputType="textPassword" />
                        </android.support.design.widget.TextInputLayout>

                        <TextView
                            android:id="@+id/forgot_password"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:clickable="true"
                            android:gravity="right"
                            android:visibility="invisible"
                            android:paddingRight="8dp"
                            android:text="@string/forgot_password"
                            android:textColor="@color/cb_blue_button"
                            android:textSize="16sp"
                            android:textStyle="bold" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="vertical">

                            <android.support.v7.widget.AppCompatButton
                                android:id="@+id/custom_signin_button"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"


                                android:background="@color/colorPrimary"
                                android:text="@string/sign_in"
                                android:textColor="#FFFFFF" />

                            <android.support.v7.widget.AppCompatButton
                                android:id="@+id/custom_create_new_account"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"


                                android:background="@color/colorPrimary"
                                android:text="@string/str_create_new_account"
                                android:textColor="#FFFFFF" />


                            <TextView
                                android:id="@+id/custom_signup_button"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:clickable="true"
                                android:gravity="center"
                                android:visibility="gone"
                                android:text="@string/sign_up"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

               <!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/colorSecondaryText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/or"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/colorSecondaryText" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/signup_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="30dp"
                        android:layout_marginTop="30dp"
                        android:visibility="gone" />

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/sign_in_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/fb"
                        android:layout_alignParentLeft="true"

                        android:layout_alignParentStart="true"
                        android:layout_marginBottom="20dp"
                        android:visibility="gone" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/login_fb_button"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"

                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="#3A589B"
                        android:drawableLeft="@drawable/icon_facebook"
                        android:paddingLeft="8dp"

                        android:text="Facebook"
                        android:textColor="#FFFFFF" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/login_google_button"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_marginBottom="10dp"

                        android:layout_marginLeft="4dp"
                        android:layout_weight="1"
                        android:background="#DB402C"
                        android:drawableLeft="@drawable/icon_gmail_plus"
                        android:paddingLeft="8dp"
                        android:text="Google"
                        android:textColor="#FFFFFF" />

                </LinearLayout>
-->
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
